test/typeerrors/ex11.act
def f(s):
    return s + "!"

a = f([8])
